<resources>
    <string name="app_name">GREEN COMMUNITY</string>

    <string name="prev">Go to Previous Image</string>
    <string name="next">Go to Next Image</string>
    <string name="img">Image Preview</string>
    <string name="choose_img">Choose an Image:</string>

    <string name="enter_cat">Enter Name:</string>
    <string name="notify_1">Notify me</string>
    <string name="default_days">5</string>
    <string name="notify_2">days before expiry</string>

    <string name="add_btn">Add</string>

    <string name="enter_date">Enter Expiry Date:</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="add_date_btn">Add another date</string>
    <string name="pick_date_btn">Pick a Date</string>

    <string name="category_list_title">Your Categories</string>
    <string name="item_list_title">Items in </string>
    <string name="add_category">Add Category</string>
    <string name="add_item">Add Item</string>
</resources>