<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_img"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/lato"
            android:id="@+id/choose_img"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:id="@+id/carousel">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/prev_icon"
                android:contentDescription="@string/prev"
                android:id="@+id/prev" />
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/pink_image_1"
                android:contentDescription="@string/img"
                android:id="@+id/img"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/next_icon"
                android:contentDescription="@string/next"
                android:id="@+id/next"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_cat"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/lato"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/text_box"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:maxLines="1"
            android:id="@+id/name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/notify_1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lato" />
            <EditText
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/text_box"
                android:text="@string/default_days"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:maxLength="3"
                android:maxLines="1"
                android:fontFamily="@font/lato"
                android:inputType="numberSigned"
                android:id="@+id/days"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/notify_2"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lato"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_btn"
            android:fontFamily="@font/lato"
            android:backgroundTint="@color/purple"
            android:id="@+id/add_cat"/>
    </LinearLayout>
</LinearLayout>