<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <include layout="@layout/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:text="@string/enter_cat"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/lato" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/text_box"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:maxLines="1"
            android:fontFamily="@font/lato"
            android:id="@+id/item_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:text="@string/enter_date"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/lato"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:id="@+id/date_box_layout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box"
                android:padding="5dp">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/lato"
                    android:hint="@string/date_hint"
                    android:textColorHint="@color/grey"
                    android:focusable="false"
                    android:background="@color/black"
                    android:onClick="setDate"
                    android:id="@+id/expiry_date"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/ic_add_blue"
                    android:onClick="addDateBox"
                    android:id="@+id/add_date_box"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/add_btn"
            android:fontFamily="@font/lato"
            android:backgroundTint="@color/purple"
            android:id="@+id/add_item"/>
    </LinearLayout>
</LinearLayout>
